# sphero_ros2

./: .gitmodules  LICENSE  README.md
sphero_description/: CMakeLists.txt  package.xml
sphero_description/launch/: sphero.launch.py
sphero_description/rviz/: sphero.rviz
sphero_description/urdf/: sphero.urdf
sphero_interfaces/: CMakeLists.txt  package.xml
sphero_interfaces/srv/: SetText.srv
sphero_node/: package.xml  setup.cfg  setup.py
sphero_node/launch/: sphero_launch.py
sphero_node/sphero_node/: .transformations.py.swp  odom_tf_pub.py  sphero_node.py  sphero_node_pysphero.py
